force-app/main/default/objects/User/fields/EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>EmployeeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EmployeeId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>