force-app/main/default/objects/User/fields/Manager_Tree__c.field-meta.xml
<CustomField>
    <fullName>Manager_Tree__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Tree</label>
    <type>TextArea</type>
</CustomField>