force-app/main/default/objects/User/fields/Manager_Tree_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Manager_Tree_Last_Updated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Tree Last Updated</label>
    <type>DateTime</type>
</CustomField>