force-app/main/default/objects/User/fields/Phone_UUID__c.field-meta.xml
<CustomField>
    <fullName>Phone_UUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Phone UUID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>